<resources>
    <string name="app_name">Yama</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="message_content">Message Content</string>
    <string name="send_message_button">Send Message</string>
    <string name="select_contact_button">Select Contact</string>
    <string name="channel_name">Channel</string>
    <string name="channel_description">Channel Description</string>
    <string name="commpose_message_description">Compose a message</string>
    <string name="reading_messages_description">Go back to reading messages screen</string>
    <string name="no_messages">You have no SMS in Inbox</string>
</resources>
