<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    android:paddingStart="15dp">

    <TextView
        android:id="@+id/phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/select_contact_button"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_contact_button"
        android:text="@string/select_contact_button"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_title" />

    <TextView
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:textSize="20sp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_title"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/message_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_content"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_text"
        app:layout_constraintLeft_toLeftOf="parent" />


    <EditText
        android:id="@+id/message_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_text_title" />

    <Button
        android:id="@+id/send_button"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/send_message_button"
        android:paddingTop="15dp"
        android:text="@string/send_message_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_text_input" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/reading_messages_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>

